--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -38,6 +38,12 @@ a{
   font-size: 36px;
 }
 
+.clear{
+  color: #003300;
+  font-size: 100;
+  text-align: center;
+}
+
 .text{
   color: #000033;
   text-align: center;
@@ -95,7 +101,7 @@ z-index: -1
 }
 
 .parallax{
-  /*height: 100%;*/
+  height: 500;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -166,4 +172,7 @@ textarea.form-control {
   background-color: transparent;
   color: #fff;
 
+}
+.btn{
+  border-color: #ffffff
 }
