--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -78,6 +78,44 @@ a{
     text-align: right;
     font-weight: bolder;
     }
+.text3{
+  color: #ffffff;
+  text-align: center;
+  font-weight: bolder;
+  font-family: sans-serif;
+  font-size: 100px;
+}
+
+.text3A{
+  color: #000033;
+  text-align: center;
+  font-weight: bolder;
+  font-family: sans-serif;
+  font-size: 100px;
+}
+
+.text4{
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 24px;
+}
+
+.text4A{
+  color: #000033;
+  font-family: sans-serif;
+  font-size: 24px;
+}
+
+.text5{
+  color: #000033;
+  font-family: sans-serif;
+  font-size: 16px;
+  text-align: justify;
+}
+
+.pt-auto {
+  padding-top: auto;
+}
 
 
 .across li {
@@ -125,7 +163,7 @@ z-index: -1
 }
 
 .parallax{
-  height: 500;
+  height: 400;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -133,12 +171,12 @@ z-index: -1
 }
 
 #Grass{
-  height: 500px;
+  height: 400px;
   background-image: url(../Images/Grass.png);
 }
 
 #NotepadUXUI{
-  height: 500px;
+  height: 400px;
   background-image: url(../Images/NotepadUXUI.png);
 }
 
@@ -204,4 +242,32 @@ textarea.form-control {
 }
 .btn{
   border-color: #ffffff
+}
+
+html {
+  font-size: 10px;
+}
+
+/*@media (min-width: 576px) {
+  html {
+    font-size: 14px;
+  }
+}*/
+
+@media (min-width: 576px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  html {
+    font-size: 28px;
+  }
 }
