--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -91,6 +91,10 @@ a{
   background-color: black;
   color: #000000;
 }
+
+.footer{
+  background-color: black;
+}
 .navtext{
   color: #000000;
 }
@@ -110,6 +114,11 @@ a{
       color: #000000;
       text-align: center;
       }
+  .textC{
+    color: #ffffff;
+    font-size: 14px;
+    text-align: center;
+  }
 
 .text2{
     color: #000000;
